--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <body>
     <div class="container">
         <div class="navbar">
@@ -31,3 +32,4 @@
             </div>
         </div>
     </body>
+    </html>
