--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
+    
+    <title>Buy a controller </title>
+    
+    </head>
 <body>
     <div class="container">
         <div class="navbar">
@@ -32,5 +41,6 @@
 </div>             
             </div>
         </div>
+        <script type="text/javascript" src="script.js"></script>
     </body>
     </html>
