--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Buy a controller </title>
     
     </head>
+    <h1>Made by Ruan</h1>
 <body>
     <div class="container">
         <div class="navbar">
