--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Buy a controller </title>
     
     </head>
-    <h1>Made by Ruan</h1>
+    
 <body>
     <div class="container">
         <div class="navbar">
@@ -42,6 +42,7 @@
 </div>             
             </div>
         </div>
+        <h1>Made by Ruan</h1>  <a href="https://www.instagram.com/lelion_1/">Instagram</a>
         <script type="text/javascript" src="script.js"></script>
     </body>
     </html>
