--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>             
             </div>
         </div>
-        <h1>Made by Ruan</h1>  <a href="https://www.instagram.com/lelion_1/">Instagram</a>
+        <h1>Made by Ruan</h1>  <a href="https://www.instagram.com/isruav/">Instagram</a>
         <script type="text/javascript" src="script.js"></script>
     </body>
     </html>
